bugfix: fix scrollbar affacted full-width problem

--- a/assets/ananke/css/custom-class.scss
+++ b/assets/ananke/css/custom-class.scss
@@ -3,22 +3,22 @@
 .object-fit-cover { object-fit: cover; }
 
 .full-width {
-  width: 100vw;
+  width: calc(100vw - var(--scrollbar-width));;
   position: relative;
   left: 50%;
-  margin-left: -50vw;
+  margin-left: calc(-50vw + 0.5*var(--scrollbar-width));
 }
 
 .center-screen {
   position: relative;
   left: 50%;
-  margin-left: -50vw;
+  margin-left: calc(-50vw + 0.5*var(--scrollbar-width));
 }
 
 $view-values: (50, 60, 70, 80, 90, 100);  // Percentages of viewport width
 @each $value in $view-values {
-  .w-#{$value}vw { width: #{$value}vw; }
-  .h-#{$value}vh { height: #{$value}vh; }
+  .w-#{$value}vw { width: calc(#{$value}vw - var(--scrollbar-width)); }
+  .h-#{$value}vh { height: calc(#{$value}vh - var(--scrollbar-width)); }
 }
 
 .grayscale-100 { filter: grayscale(100%); }
